improve welcome animation, make nav overflow scrollable, fix section errors

--- a/src/assets/stylesheet/component/shared-nav.scss
+++ b/src/assets/stylesheet/component/shared-nav.scss
@@ -10,6 +10,7 @@
 .nav__container {
   width: 100px;
   height: 100%;
+  overflow: auto;
 }
 
 .nav__link {
