--- a/src/assets/stylesheet/component/shared-section-title.scss
+++ b/src/assets/stylesheet/component/shared-section-title.scss
@@ -27,10 +27,10 @@
  * 1. Visually inline with top element
  */
 .section-title__subtitle-container {
-  margin: -11px 0 145px 35%; /* 1. */
+  margin: -10px 0 145px 35%; /* 1. */
 
   @include media('>small') {
-    margin: -11px 0 145px 40%; /* 1. */
+    margin: -10px 0 145px 40%; /* 1. */
   }
 
   @include media('>medium') {
